<resources>
    <string name="app_name">B07 Project</string>
    <string name="title">"Toronto Asian Art Museum Collection Management" </string>
    <string name="admin"> Admin </string>
    <string name="select"> Select </string>
    <string name="lot_number">Lot Number</string>
    <string name="item_name">Name</string>
    <string name="category">Category</string>
    <string name="period">Period</string>
    <string name="description">Description</string>
    <string name="picture_video">Picture/Video</string>
    <string name="upload_file">Upload File Here</string>
    <string name="submit">Submit</string>
    <string name="huh">item_name</string>
    <string name="prev_page"> Prev. page </string>
    <string name="next_page"> Next page </string>
    <string name="view"> View </string>
    <string name="search"> Search </string>
    <string name="add"> Add </string>
    <string name="report"> Report </string>
    <string name="remove"> Remove </string>
    <string name="back"> Back </string>
    <string name="example_yellow_vase">Example: Yellow-Glazed Flat Vase</string>
    <!--
    We need a way to fetch categories and periods from the database
    Note that this is only a temporary way to get categories and periods
    -->
    <string-array name="periods_array">
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Qin</item>
        <item>Hang</item>
        <item>Shangou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>

    </string-array>
    <string-array name="categories_array">
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze</item>
        <item>Brass and Copper</item>
        <item>Gold and Silvers</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>
    <string name="admin_button">Admin</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>

    <!--
    We need a way to fetch categories and periods from the database
    Note that this is only a temporary way to get categories and periods
    -->

</resources>