<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#068CF2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="405dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:stretchColumns="1,2,3,4,5,6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.120000005">

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/select" />

            <TextView
                android:layout_width="68dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/lot_number" />

            <TextView
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/item_name"/>

            <TextView
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/category" />

            <TextView
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/period" />

            <TextView
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/description" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="376dp"
        android:layout_height="298dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/navigation_buttons"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <!-- Navigation buttons -->
    <LinearLayout
        android:id="@+id/navigation_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        <Button
            android:id="@+id/prev_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/prev_page" />

        <Button
            android:id="@+id/next_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/next_page"
            android:visibility="visible" />
    </LinearLayout>

    <!-- Action Buttons -->
    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/navigation_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/view"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="666dp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/search"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="661dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
