<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="8dp"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:id="@+id/header">

        <TextView
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:padding="8dp"
            android:text="Lot #"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_weight="2"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/item_name"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_weight="2"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/category"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_weight="2"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/period"
            tools:ignore="TextContrastCheck" />
    </TableRow>

</TableLayout>