<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/blueBlack"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="101dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <!-- Titles: Lot Number and Name -->
            <TextView
                android:id="@+id/lotNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lot_number"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="roboto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/name"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight= "1" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="roboto"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/lotNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight= "3"
                app:layout_constraintBottom_toTopOf="@id/imageView2"
                android:layout_marginBottom="8dp" />

            <!-- CheckBox, ImageView, Category, Period and Description -->

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="21dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageView2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/picture_video"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@id/checkBox"
                app:layout_constraintTop_toBottomOf="@id/name"
                />

            <!-- Category and Period beside each other -->
            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="roboto"
                app:layout_constraintTop_toTopOf="@id/imageView2"
                app:layout_constraintStart_toEndOf="@id/imageView2"
                app:layout_constraintEnd_toStartOf="@id/period"
                app:layout_constraintHorizontal_chainStyle="spread" />

            <TextView
                android:id="@+id/period"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/period"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="roboto"
                app:layout_constraintTop_toTopOf="@id/imageView2"
                app:layout_constraintStart_toEndOf="@id/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread" />

            <!-- Description -->
            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="roboto"
                app:layout_constraintTop_toBottomOf="@id/category"
                app:layout_constraintStart_toEndOf="@id/imageView2"
                app:layout_constraintEnd_toEndOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>